--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eran-photo-studio-3",
+  "name": "version-1.0.6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "@google/genai": "^1.30.0",
+    "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0"
   },
   "devDependencies": {
