--- a/netlify.toml
+++ b/netlify.toml
@@ -15,4 +15,8 @@
   status = 200
 
 # Environment variables (set these in Netlify UI)
-# GEMINI_API_KEY - Your Gemini API key
+# GEMINI_API_KEY_1 - Primary Gemini API key
+# GEMINI_API_KEY_2 - Backup Gemini API key #2
+# GEMINI_API_KEY_3 - Backup Gemini API key #3
+# GEMINI_API_KEY_4 - Backup Gemini API key #4
+# The app will automatically rotate through keys if one hits rate limits
